# tictactoe

./: me.joern.tictactoe.json  meson.build
data/: me.joern.tictactoe.appdata.xml.in  me.joern.tictactoe.gschema.xml  meson.build
po/: POTFILES
src/: main.vala  meson.build  tictactoe.gresource.xml  window.vala
